2007-11-21  Tim Taubert <twenty-three@users.berlios.de> 

	* LICENSE: license added
	* AssemblyInfo.cs: project description changed
	* v4l-net.mdp, V4LAudioInput.cs: documentation added

2007-11-21  Tim Taubert <twenty-three@users.berlios.de> 

	* V4LAudioInput.cs: added some documentation; some methods were made
	  internal

=== Release 0.0.1 ===