@@ -72,6 +72,7 @@
     <File name="V4LInputStatus.cs" subtype="Code" buildaction="Compile" />
     <File name="V4LTunerAudioMode.cs" subtype="Code" buildaction="Compile" />
     <File name="V4LTunerAudioReception.cs" subtype="Code" buildaction="FileCopy" />
+    <File name="V4LAudioInputCapability.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
